# k8s-example-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  package.json  tools
.github/: CODEOWNERS
auth_api/: Dockerfile  README.md  main.py  pyproject.toml
coredb/: 000001_baseline.sql
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
tools/toolchains/: BUILD.bazel
